feat: complete m6d open api acceptance
